[metadata]
name = med_tocsv
version = 1.0
author = "Jean-Emmanuel Longueville, Myriam Hanna"
author_email = "jean.emmanuel.longueville(@)univ-poitiers.fr,
                myriam.hanna(@)univ-poitiers.fr"
description = A module that converts MedAssociates data to csv files
license = Cecill,
url = https://sourcesup.renater.fr/anonscm/git/medanalysis/medanalysis.git
long_description = file: README.MD
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved ::
keywords = MedAssociates, Data wrangling, CSV,
requires =
    pandas
    numpy
    argparse
    yaml

[options]
packages = find:
zip_safe = True
install_requires = pandas ; numpy ; argparse ; yaml

[options.entry_points]
console_scripts =
    med_tocsv-run = med_project.main_cli:main