[metadata]
name = med_tocsv
version = 1.0
author = "Jean-Emmanuel Longueville, Myriam Hanna"
author_email = "jean.emmanuel.longueville(@)univ-poitiers.fr,
                myriam.hanna(@)univ-poitiers.fr"
description = A module that converts MedAssociates data to csv files
license = Cecill,
url = https://sourcesup.renater.fr/anonscm/git/medanalysis/medanalysis.git
long_description = file: README.MD
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved ::
keywords = MedAssociates, Data wrangling, CSV,
requires =
    pandas
    numpy
    argparse
    yaml
    gooey

[options]
packages = find:
zip_safe = False
install_requires = pandas ; numpy ; argparse ; yaml

[options.entry_points]
console_scripts =
    med_to_csv-run = med_to_csv.main_cli:main
    med_to_csv-gui = med_to_csv.main_gui:main

[options.data_files]
data = med_to_csv/img/config_icon.png, med_to_csv/img/program_icon.png